--- a/.gitignore
+++ b/.gitignore
@@ -99,3 +99,9 @@ ENV/
 
 # mypy
 .mypy_cache/
+
+# my_ignore_files
+models/default/
+test_models/
+data/total_word_feature_extractor_zh.dat
+data/w2v.pickle
