--- a/.gitignore
+++ b/.gitignore
@@ -103,6 +103,7 @@ ENV/
 # my_ignore_files
 .idea/
 models/default/*
+models/default/!README.md
 test_models/
 data/total_word_feature_extractor_zh.dat
 data/w2v.pickle
