--- a/sample_configs/_my_config.json
+++ b/sample_configs/_my_config.json
@@ -4,7 +4,7 @@
         "tokenizer_ltp",
         "ner_mitie",
         "ner_synonyms",
-        "w2v_featurizer",
+        "intent_featurizer_mitie",
         "intent_classifier_sklearn"],
   "language": "zh",
   "mitie_file": "./data/total_word_feature_extractor_zh.dat",
