--- a/sample_configs/_my_config.json
+++ b/sample_configs/_my_config.json
@@ -4,7 +4,7 @@
         "tokenizer_ltp",
         "ner_mitie",
         "ner_synonyms",
-        "intent_featurizer_mitie",
+        "tfidf_featurizer",
         "sklearn_one_class_svm_intent_classifier"],
   "language": "zh",
   "mitie_file": "./data/total_word_feature_extractor_zh.dat",
