--- a/sample_configs/_my_config.json
+++ b/sample_configs/_my_config.json
@@ -1,5 +1,5 @@
 {
-  "name": "rasa_nlu_test",
+  "fixed_model_name": "rasa_nlu_test",
   "pipeline": ["nlp_mitie",
         "tokenizer_ltp",
         "ner_mitie",
@@ -9,5 +9,6 @@
   "language": "zh",
   "mitie_file": "./data/total_word_feature_extractor_zh.dat",
   "path" : "./models",
-  "data" : "./data/examples/rasa/demo-rasa_zh_medical.json"
+  "data" : "./data/examples/rasa/demo-rasa_zh_medical.json",
+  "port": 9993
 }
