my_config微调,不指定model name，指定project

--- a/sample_configs/_my_config.json
+++ b/sample_configs/_my_config.json
@@ -1,5 +1,5 @@
 {
-  "fixed_model_name": "rasa_nlu_test",
+  "project": "rasa_nlu_test",
   "pipeline": ["nlp_mitie",
         "tokenizer_ltp",
         "ner_mitie",
